assets/css/style.scss
/* ... */
.post .post-content .post-date,
.post .post-content .post-words {
  font-size: 12px;
}

.post .post-content .post-title {
  margin: 0 0 10px;
  font-size: 30px;
  font-weight: 400;
}

.post .post-content .post-title a {
  font-family: 'PT Serif', serif;
  text-decoration: none;
  color: #263959;
}

.post .post-content p {
  margin-top: 0;
}

.clearfix::before, .clearfix::after {
  content: "";
  display: table;
}

.clearfix::after {
  clear: both;
}

.content-box {
  padding: 20px;
  padding-left: 260px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-flex-wrap: wrap;
      -ms-flex-wrap: wrap;
          flex-wrap: wrap;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
      -ms-flex-align: stretch;
          align-items: stretch;
}

.page-cover-image {
  position: relative;
  padding: 0;
  margin: 0;
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  left: 0;
  right: 0;
  display: block;
  height: 300px;
  background-color: #fafafa;
  overflow: hidden;
}

.page-cover-image .page-image {
  width: 100%;
  height: 100%;
}

.page-footer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-flex-wrap: wrap;
      -ms-flex-wrap: wrap;
          flex-wrap: wrap;
  padding-bottom: 30px;
  margin: 30px 0;
  border-bottom: 1px solid #a0a0a0;
}

.page-footer .page-share {
  margin-bottom: 10px;
  text-align: left;
}

.page-footer .page-share a {
  display: inline-block;
  text-decoration: none;
  background-color: #fafafa;
  border: 1px solid #ecf0f1;
  padding: 5px 10px;
  margin-left: 5px;
  color: #263959;
  font-size: 12px;
  -webkit-transition: background-color .3s;
  -o-transition: background-color .3s;
  transition: background-color .3s;
}

.page-footer .page-share a:first-child {
  margin-left: 0;
}

.page-footer .page-share a:hover {
  background-color: #ecf0f1;
}

.page-footer .page-tag a {
  text-decoration: none;
  font-size: 10px;
  padding: 5px 10px;
  margin-left: 5px;
  color: #263959;
  text-transform: uppercase;
  border: 1px solid #263959;
}

.page-footer .page-tag a:hover {
  text-decoration: underline;
}

/* - - - - - - - - - - Tag Styles - - - - - - - - - - */
.blog-tags {
  width: 100%;
  background-color: #ffffff;
  padding: 0 20px 20px;
}

.blog-tags h1 {
  font-size: 30px;
  text-align: center;
  line-height: 1.3;
  color: #263959;
}

.blog-tags h2 {
  color: #263959;
  margin: 10px 0;
}

.tags {
  margin: 0;
  padding: 10px;
}

.tags li {
  display: inline-block;
  margin: 5px;
  list-style: none;
}

.tags li a {
  text-decoration: none;
  color: #263959;
  display: inline-block;
  padding: 5px 10px;
  border: 1px solid #ecf0f1;
  background-color: #fafafa;
  -webkit-transition: all .3s;
  -o-transition: all .3s;
  transition: all .3s;
}

.tags li a:hover {
  background-color: #ecf0f1;
}

.tag-list span a {
  text-decoration: none;
  color: #263959;
}

.tag-list span a:hover {
  text-decoration: underline;
  opacity: .8;
}

.wrap-content {
  padding: 20px;
}

.header-page {
  text-align: center;
  margin: 10px 0;
}

.header-page .page-title {
  font-weight: 400;
  margin: 0 0 10px;
  line-height: 1.3;
}

.header-page .page-date {
  color: #a0a0a0;
  font-weight: 300;
  font-size: 12px;
  text-transform: uppercase;
}

/* Small Devices, Tablets */
@media only screen and (max-width: 768px) {
  .sidebar {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
        -ms-flex-pack: justify;
            justify-content: space-between;
    width: 100%;
    padding: 10px;
    background-color: #ffffff;
    -webkit-box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
            box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
  }
  .sidebar footer {
    margin-bottom: 10px;
  }
  .about {
    text-align: center;
    max-width: 480px;
    margin: 10px auto auto;
  }
  .about img {
    width: 100px;
    height: 100px;
    -webkit-border-radius: 100%;
            border-radius: 100%;
    margin-bottom: 10px;
  }
  .content-box {
    padding: 20px 10px;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -webkit-flex-direction: row;
        -ms-flex-direction: row;
            flex-direction: row;
    -webkit-flex-wrap: wrap;
        -ms-flex-wrap: wrap;
            flex-wrap: wrap;
    -webkit-box-align: stretch;
    -webkit-align-items: stretch;
        -ms-flex-align: stretch;
            align-items: stretch;
  }
  .contact-title, .copyright {
    display: none;
  }
}

/* - - - - - - - - - - Home Page Styles - - - - - - - - - - */
.sidebar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
      -ms-flex-pack: justify;
          justify-content: space-between;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  width: 240px;
  height: 100%;
  padding: 20px 10px;
  background-color: #ffffff;
}
/* ... */

